--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
+    "nanoid": "^5.1.5",
     "typescript": "^5.8.3",
     "zod": "^3.24.4"
   },
