--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -25,6 +26,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/dotenv": "^6.1.1",
     "nodemon": "^3.1.10",
     "rimraf": "^5.0.10"
